fixed code smells

--- a/src/app/pages/adverse-action/adverse-action.component.html
+++ b/src/app/pages/adverse-action/adverse-action.component.html
@@ -49,7 +49,7 @@
 
     <div class="footer">
       <div class="footer-left">
-     <p class="footer-text">{{ADVERSEACTION_FOOTER}}<img src="assets/icons/number.svg" style="padding-inline: 12px;"> <span>Days</span> </p>
+     <p class="footer-text">{{ADVERSEACTION_FOOTER}}<img src="assets/icons/number.svg" alt="footer-image" style="padding-inline: 12px;"> <span>Days</span> </p>
     </div>
     <button class="btn btn-primary" [disabled]="isButtonDisable" (click)="onButtonClick()">{{ADVERSEACTION_BUTTON}}</button>
     </div>
