--- a/src/app/shared/loader/loader.component.html
+++ b/src/app/shared/loader/loader.component.html
@@ -1,4 +1,4 @@
 <div *ngIf="isSuccess=== 'false'" class="lds-hourglass"></div>
 <div *ngIf="isSuccess=== 'true'" >
-  <img src="assets/icons/success.gif" class="success-loader"/>
+  <img src="assets/icons/success.gif" class="success-loader" alt="success-image"/>
 </div>
