--- a/src/app/organisms/court-searches/court-searches.component.html
+++ b/src/app/organisms/court-searches/court-searches.component.html
@@ -2,7 +2,7 @@
  <p class="header-title"> {{COURT_SEARCHES}}</p>
 </div>
 <div class="mat-elevation-z0">
-  <table mat-table  matSort [dataSource]="dataSource">
+  <table mat-table  matSort [dataSource]="dataSource"  aria-label="courst-searches">
     <ng-container matColumnDef="search">
       <th mat-header-cell *matHeaderCellDef class="table-header">{{COURTSERACHES_HEADER[0]}}</th>
       <td mat-cell *matCellDef="let element"  style="color: rgba(34, 77, 255, 1); cursor: pointer;"> {{element.search}} </td>
