--- a/src/app/pages/home/candidate-list/candidate-list.component.html
+++ b/src/app/pages/home/candidate-list/candidate-list.component.html
@@ -1,7 +1,3 @@
-<!-- <div *ngIf="isLoading" style="text-align: center; margin-top: 200px;">
-  <app-loader></app-loader>
-  <p>Fetching candidate list.....</p>
-</div> -->
 <div>
   <app-header></app-header>
 </div>
@@ -36,7 +32,7 @@
 </mat-menu>
 
 <div class="mat-elevation-z0">
-  <table mat-table  matSort [dataSource]="dataSource">
+  <table mat-table  matSort [dataSource]="dataSource" aria-label="liat-table">
     <ng-container matColumnDef="name">
       <th mat-header-cell *matHeaderCellDef class="table-header">{{CANDIDATELIST_COLUMNS[0] | uppercase}}</th>
       <td mat-cell *matCellDef="let element"  style="color: rgba(34, 77, 255, 1); cursor: pointer;"> {{element.name}} </td>
