--- a/src/app/atoms/not-found/not-found.component.html
+++ b/src/app/atoms/not-found/not-found.component.html
@@ -1,4 +1,4 @@
-<a target="_blank" href="https://www.enationalelectronics.com">
+<a target="_blank" href="https://www.enationalelectronics.com" rel="noopener">
   <div class="container">
   <div class="row">
     <div class="col-sm-12 col-md-12 mt-5 mb-5">
